# MCP-Web-Search-Answer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  participants.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  answer_agent.py  query_agent.py
langflow/: __init__.py  graph.py
monitoring/: alert_rules.yml  prometheus.yml
tests/: test_imports.py
tools/: __init__.py  search_tool.py
